# ServerProxy

./: CMakeLists.txt  http.c  http.h  main.c  program  readme.md  response.c  response.h  server  server.c  server.h  shared.txt  static_files.c  static_files.h  worker.c  worker.h
General Info/: epoll.md  http.md  os networking stack.md  protocols.md
data_structures/: CMakeLists.txt  stack.c  stack.h
www/: index.html
